kubernetes/services/romm/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: romm
  labels:
    name: romm
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
